--- a/bib.bib
+++ b/bib.bib
@@ -11,7 +11,7 @@
 @MANUAL{WhatIsIPS,
   title = {Indoor Positioning Systems?},
   author = {senionlab},
-  address = {\url{https://senionlab.com/indoor-positioning-system/}},
+  url ={https://senionlab.com/indoor-positioning-system/},
   date = {2015},
   note = {Accessed: 15-2-2016}
 }
@@ -28,7 +28,7 @@
 @MANUAL{DonDNextBigThing,
   title = {Keen On… Don Dodge: Why Indoor Location Is The Next Big Thing [TCTV]},
   author = {Andrew Keen},
-  address = {\url{http://techcrunch.com/2012/09/17/keen-on-don-dodge-why-indoor-location-is-the-next-big-thing-tctv/}},
+  url ={http://techcrunch.com/2012/09/17/keen-on-don-dodge-why-indoor-location-is-the-next-big-thing-tctv/},
   date = {2012},
   month = {09},
   day = {17},
@@ -38,7 +38,7 @@
 @MANUAL{DonDIndoorIsNext,
 	title = {My 5 predictions for 2015 and beyond},
 	author = {Don Dodge},
-	address = {\url{http://dondodge.typepad.com/}},
+	url ={http://dondodge.typepad.com/},
 	date = {2015},
 	month = {1},
 	day = {1},
@@ -48,7 +48,7 @@
 @MANUAL{TrafficIlligal,
 	title = {Udbredt system til trafikovervågning er ulovligt},
 	author = {Magnus Boye},
-	address = {\url{http://www.version2.dk/artikel/udbredt-trafikovervaagningssystem-er-ulovligt-76565}},
+	url ={http://www.version2.dk/artikel/udbredt-trafikovervaagningssystem-er-ulovligt-76565},
 	date = {2015},
 	month = {1},
 	day = {26},
@@ -58,7 +58,7 @@
 @MANUAL{TrafficOK,
 	title = {Blip Systems afgoerelse},
 	author = { Danish Business Authority},
-	address = {\url{https://erhvervsstyrelsen.dk/sites/default/files/media/afgoerelse_-_blip_systems.pdf}},
+	url ={https://erhvervsstyrelsen.dk/sites/default/files/media/afgoerelse_-_blip_systems.pdf},
 	date = {2015},
 	month = {3},
 	day = {26},
@@ -66,9 +66,9 @@
 }
 
 @MANUAL{CiscoTri,
-	title = {A Technical Review of Cisco's Wi Fi-Based Location Analytics White Paper},
+	title = {url =isco's Wi Fi-Based Location Analytics White Paper},
 	author = {Dr. James Little and Dr. Brendan O’Brien},
-	address ={\url{http://www.cisco.com/c/en/us/products/collateral/wireless/mobility-services-engine/white_paper_c11-728970.pdf}},
+	url ={http://www.cisco.com/c/en/us/products/collateral/wireless/mobility-services-engine/white_paper_c11-728970.pdf},
 	date = {2013},
 	month = {7},
 	note = {Accessed: 22-2-2016}
@@ -77,7 +77,7 @@
 @MANUAL{CookieDirective,
   title = {Directive on privacy and electronic communications},
   author = {The European parliament},
-  address = {\url{http://eur-lex.europa.eu/LexUriServ/LexUriServ.do?uri=CELEX:32002L0058:en:HTML}},
+  url ={http://eur-lex.europa.eu/LexUriServ/LexUriServ.do?uri=CELEX:32002L0058:en:HTML},
   date = {2002},
   month = {7},
   day = {12},
@@ -86,7 +86,7 @@
 @MANUAL{IPSoverGPS,
 	title = {Help Patrons Find Their Way With Indoor Google Maps},
 	author = {Chad Mairn},
-	address = {\url{http://www.infotoday.com/cilmag/apr14/Mairn--Help-Patrons-Find-Their-Way-With-Indoor-Google-Maps.shtml}},
+	url ={http://www.infotoday.com/cilmag/apr14/Mairn--Help-Patrons-Find-Their-Way-With-Indoor-Google-Maps.shtml},
 	date = {2014},
 	month = {4},
 	note = {Accessed: 24-2-2016}
@@ -104,7 +104,7 @@
 @MANUAL{RFIDjournal,
 	title = {RFID Business Applications},
 	author = {Bob Violino},
-	address = {\url{http://www.rfidjournal.com/articles/view?1334}},
+	url ={http://www.rfidjournal.com/articles/view?1334},
 	date = {2005},
 	month = {1},
 	day = {16},
@@ -114,7 +114,7 @@
 @article{google_indoor,
 	title = {Revamped Google Maps for iOS launches: supports iPad, indoor maps, enhanced navigation},
 	author = {9to5mac},
-	address = {\url{http://9to5mac.com/2013/07/16/revamped-google-maps-for-ios-launches-adds-ipad-indoor-maps-enhanced-navigation/}},
+	url ={http://9to5mac.com/2013/07/16/revamped-google-maps-for-ios-launches-adds-ipad-indoor-maps-enhanced-navigation/},
 	note = {Accessed: 25-2-2016},
 	date = {2013},
 	month = {7},
@@ -124,7 +124,7 @@
 @article{google_dk,
 	title = {Indoor Maps availability},
 	author = {Google},
-	address = {\url{https://support.google.com/gmm/answer/1685827?hl=en&topic=1685871&ctx=topic}},
+	url ={https://support.google.com/gmm/answer/1685827?hl=en&topic=1685871&ctx=topic},
 	note = {Accessed: 25-2-2016},
 	date = {2016}
 	}
@@ -147,102 +147,102 @@
 	author = {Cisco},
 	title = {Cisco Wireless Control System},
 	note = {Accessed 29-2-2016},
-	url = {\url{http://www.cisco.com/c/dam/en/us/td/i/200001-300000/270001-280000/276001-277000/276195.tif/jcr:content/renditions/276195.jpg}}
+	url ={http://www.cisco.com/c/dam/en/us/td/i/200001-300000/270001-280000/276001-277000/276195.tif/jcr:content/renditions/276195.jpg}
 }
 @MANUAL{ciscoMSE,
 	title = {Cisco Mobility Services Engine},
 	author = {Cisco},
-	address = {\url{http://www.cisco.com/c/en/us/td/docs/solutions/Enterprise/Mobility/emob73dg/emob73/ch13Loca.html\#74225}},
+	url ={http://www.cisco.com/c/en/us/td/docs/solutions/Enterprise/Mobility/emob73dg/emob73/ch13Loca.html\#74225},
 	note = {Accessed: 01-03-2016}
 }
 @MISC{cisco_mse_api,
 	author = {Cisco},
 	title = {Cisco MSE Location API},
 	note = {Accessed 29-2-2016},
-	url = {\url{http://www.cisco.com/c/en/us/td/docs/wireless/mse/3350/7-5/MSE_REST_API/Guide/Cisco_MSE_REST_API_Guide/Location_API.html}}
+	url ={http://www.cisco.com/c/en/us/td/docs/wireless/mse/3350/7-5/MSE_REST_API/Guide/Cisco_MSE_REST_API_Guide/Location_API.html}
 }
 @MISC{restful_oracle,
 	author = {Oracle},
 	title = {What Are RESTful Web Services?},
 	note = {Accessed 2-3-2016},
-	url = {\url{http://docs.oracle.com/javaee/6/tutorial/doc/gijqy.html}}
+	url ={http://docs.oracle.com/javaee/6/tutorial/doc/gijqy.html}
 }
 @MISC{treeset,
 	author = {Oracle},
 	title = {Class TreeSet<T>},
 	note = {Accessed 2-3-2016},
-	url = {\url{https://docs.oracle.com/javase/7/docs/api/java/util/TreeSet.html}}
+	url ={https://docs.oracle.com/javase/7/docs/api/java/util/TreeSet.html}
 }
 @MISC{dimensions,
 	author = {Cisco},
 	title = {Three Dimensions that Influence Location Quality},
 	note = {Accessed 2-3-2016},
-	url = {\url{http://blogs.cisco.com/wireless/three-dimensions-that-influence-location-quality}}
+	url ={http://blogs.cisco.com/wireless/three-dimensions-that-influence-location-quality}
 }
 @MISC{zonith,
 	author = {Zonith},
 	title = {IPS - INDOOR POSITIONING SYSTEM},
 	note = {Accessed 7-3-2016},
-	url = {\url{http://zonith.com/products/ips/}}
+	url ={http://zonith.com/products/ips/}
 }
 @MISC{redpin,
 	author = {Redpin},
 	title = {what is redpin?},
 	note = {Accessed 7-3-2016},
-	url = {\url{http://redpin.org/index.html}}
+	url ={http://redpin.org/index.html}
 }
 @MISC{googleindoormaps,
 	author = {Google},
 	title = {Google Indoor Maps},
 	note = {Accessed 7-3-2016},
-	url = {\url{https://www.google.com/maps/about/partners/indoormaps/}}
+	url ={https://www.google.com/maps/about/partners/indoormaps/}
 }
 @MISC{tracking_approaches,
 	author = {Cisco},
 	title ={Location Tracking Approaches},
 	note = {Accessed 2-3-2016},
-	url = {\url{http://www.cisco.com/c/en/us/td/docs/solutions/Enterprise/Mobility/WiFiLBS-DG/wifich2.html}}
+	url ={http://www.cisco.com/c/en/us/td/docs/solutions/Enterprise/Mobility/WiFiLBS-DG/wifich2.html}
 }
 @MISC{gitlab_guide,
 	author = {GitLab},
 	title = {Install a GitLab CE Omnibus package on Ubuntu 14.02},
 	note = {Accessed 8-3-2016},
-	url = {\url{https://about.gitlab.com/downloads/#ubuntu1404}}
+	url ={https://about.gitlab.com/downloads/#ubuntu1404}
 }
 @MISC{vbox,
 	author = {Oracle},
 	title = {VirtualBox},
 	note = {Accessed 8-3-2016},
-	url = {\url{https://www.virtualbox.org/}}
+	url = {https://www.virtualbox.org/}
 }
 @MISC{putty,
 	author = {PuTTY},
 	title = {PuTTY Download Page},
 	note = {Accessed 8-3-2016},
-	url = {\url{http://www.chiark.greenend.org.uk/~sgtatham/putty/download.html}}
+	url ={http://www.chiark.greenend.org.uk/~sgtatham/putty/download.html}
 }
 @MISC{guidelines,
 	author = {Bin Yang},
 	title = {Report Guidelines for the aSTEP Multi-Project},
 	note = {Accessed 14-3-2016},
-	url = {\url{https://www.moodle.aau.dk/pluginfile.php/697817/mod_resource/content/2/Report%20Guidelines%20for%20the%20aSTEP%20SW6%20Multi.pdf}}
+	url ={https://www.moodle.aau.dk/pluginfile.php/697817/mod_resource/content/2/Report%20Guidelines%20for%20the%20aSTEP%20SW6%20Multi.pdf}
 }
 @MISC{gps_indoor,
 	author = {Hans Fredrick},
 	title = {Why doesn't GPS Work Inside a Building},
 	note = {Accessed 14-3-2016},
-	url = {\url{http://science.opposingviews.com/doesnt-gps-work-inside-building-18659.html}}
+	url ={http://science.opposingviews.com/doesnt-gps-work-inside-building-18659.html}
 }
 @MISC{gps_report,
 	author = {William J. Hughes Technical Center and NSTB/W AAS T\&E Team and Atlantic City International Airport and NJ 08405},
 	title = {Global Positioning System (GPS) Standard Positioning Service (SPS) Performance Analysis Report},
 	note = {Accessed 16-3-2016},
-	adress = {\url{http://www.nstb.tc.faa.gov/reports/PAN86_0714.pdf#page=22}}
+	url ={http://www.nstb.tc.faa.gov/reports/PAN86\_0714.pdf\#page=22}
 }
 
 @MANUAL{geo_cisco,
 	title = {Configuring Cisco Prime Infrastructure},
 	author = {Cisco},
-	address = {\url{http://www.cisco.com/c/en/us/td/docs/solutions/Enterprise/Borderless_Networks/Unified_Access/CMX/CMX_Prime.html\#pgfId-1019702}},
+	url ={http://www.cisco.com/c/en/us/td/docs/solutions/Enterprise/Borderless_Networks/Unified_Access/CMX/CMX_Prime.html\#pgfId-1019702},
 	note = {Accessed: 18-03-2016}
 }
