--- a/1sprint/cisco_usage.tex
+++ b/1sprint/cisco_usage.tex
@@ -13,6 +13,8 @@ A RESTful service typically communicates using the HTTP or HTTPS protocols, and 
 
 To create a transparent RESTful service that duplicates the functionality of the Cisco RESTful API, we need to make use of the same URIs as the Cisco API\cite{cisco_mse_api}. This is done with the use of the Jersey Java library, which affords the possibility of creating a HTTP server and specifying what URIs are available for a client to request.
 
+The code example shown in \cref{lst:context_code} shows an example of how to specify a URI. The createContext() method on line 1 takes two parameters: a string for the URI and an anonymous function, httpExchange, implementing an interface. The anonymous function taking up the rest of the example dictates what actions are performed once a connection is established. In this case some verification is performed immediately after the function call, to authenticate the user. A response is generated based on the URI; on line 6 we retrieve all clients from Cisco using the CollectAllClients() function, which also performs the task of obfuscating necessary information. The list of clients is then written though an OutputStream to the requester, as seen on lines 8 and 9. The anonymous function terminates as the OutputStream is closed, which also serves as a termination of the HTTP connection. 
+
 \begin{lstlisting}[caption={Adding a URI},label={lst:context_code},language=inc_Java]
 server.createContext("/api/contextaware/v1/location/clients", httpExchange -> {
             if (VerifyConnection(httpExchange) == false){
@@ -26,9 +28,8 @@ server.createContext("/api/contextaware/v1/location/clients", httpExchange -> {
             os.close();
         });
 \end{lstlisting}
-The code example shown on \cref{lst:context_code} shows an example of how to specify a URI. The createContext() method on line 1 takes two parameters: a string for the URI and an anonymous function implementing an interface. The anonymous function taking up the rest of the example dictates what actions are performed once a connection is established. In this case some verification is performed immediately after the function call, to authenticate the user. A response is generated based on the URI; on line 4 we retrieve all clients from Cisco using the ColletAllClients() function, which also performs the task of obfuscating necessary information. The list of clients is then written though an OutputStream to the requester, as seen on lines 8 and 9. The anonymous function terminates as the OutputStream is closed, which also serves as a termination of the HTTP connection. 
 
-In order to accommodate the privacy concern, we implement some simple methods to obfuscate MAC-address and user name, one of which can be seen in \cref{lst:obfuscating_mac}. It might be the case that users allow for us to store their personal information, and as such we will have to make a check to see if this has been allowed. To store this information we use a TreeSet, which guarantees $log(n)$ time cost for adding, deleting and searching \cite{treeset}. On line 2 we obtain the MAC-address of the user, which is used on line 3 to perform a search in the TreeSet. If search returns empty we obfuscate the MAC-address, as seen on line 4. This is done in a similar way for the user name.
+In order to accommodate the privacy concern, we implement some simple methods to obfuscate the MAC-address and user name, one of which can be seen in \cref{lst:obfuscating_mac}. It might be the case that users allow for us to store their personal information, and as such we will have to make a check to see if this has been allowed. To store this information we use a TreeSet, which guarantees $log(n)$ time cost for adding, deleting and searching \cite{treeset}. On line 2 we obtain the MAC-address of the user, which is used in line 3 to perform a search in the TreeSet. If the search returns empty we obfuscate the MAC-address, as seen on line 4. This is done in a similar way for the user name.
 
 \begin{lstlisting}[caption={Obfuscating mac-address},label={lst:obfuscating_mac},language=inc_Java]
 Private static Client ObfuscateMacAddress(Client singleClient) {
