--- a/collaboration/collaboration.tex
+++ b/collaboration/collaboration.tex
@@ -16,4 +16,5 @@ a quote from the report guidelines for aSTEP\cite{guidelines}:
 
 This means we need to make at least two collaborations with other aSTEP groups.
 
+\input{collaboration/aSTEP_meetings}
 \input{collaboration/gitlab}
