--- a/3sprint/chapter_doc.tex
+++ b/3sprint/chapter_doc.tex
@@ -1,4 +1,4 @@
-\chapter{Sprint 3}
+\chapter{Sprint 3}\label{cha:sprint3}
 
 One chapter per development cycle (i.e., one chapter per sprint) performed in the project documenting the analysis, design, refactoring, implementation and test performed in that cycle.
 
