--- a/collaboration/aSTEP_meetings.tex
+++ b/collaboration/aSTEP_meetings.tex
@@ -1,8 +1,11 @@
 \section{aSTEP meetings}
-In the aSTEP project ten groups are working together to make one large system with multiple applications. To keep track of all groups progress and their needs i regard to other parts of the system, being developed by other groups, there are being held weekly meetings with one representative from each group. In addition to this there are being held smaller meetings, where only a few groups participate, in order to specify needs and possible ideas.
+In the aSTEP project ten groups are working together to make one large system with multiple applications. To keep track of all groups progress and their needs i regard to other parts of the system, being developed by other groups, there are being held weekly meetings with one representative from each group. In addition to this there are being held smaller meetings, where only a few groups participate, in order to specify needs, present ideas and possible solutions.
 
-At the large meetings our representative have been responsible for taking notes after which he writes a summary and makes it available for everyone.
-\ofx{Is there much more to write about this Anders?}
+At the large meetings our representative have been responsible for taking notes after which he writes a summary and makes it available for everyone. During these meetings there is a live chat on Slack such that everyone in the project can see what happens and come with input if there are something they wish to be taken up. In mid March it was decided at a meeting that there should be a mid-sprint meeting, where the goals for the sprint was presented and the progress thereof evaluated.
 
-We have had multiple smaller meetings with respectively the groups responsible for the database, the application group utilizing indoor positioning and the user management group. At meetings with the application group they have specified what data they need and we have explained how we can provide it. At meetings with the database groups there have been talked about what data we want to be stored based on what we have been told by the application group and they have specified how they would like to receive the data. 
+We have had multiple smaller meetings with respectively the groups responsible for the database, the application group utilizing indoor positioning, the user management group and the other group working with indoor positioning. 
+At meetings with the application group they have specified what data they need and we have explained how we can provide it. 
+At meetings with the database groups there have been talked about what data we want to be stored, based on what we have been told by the application group and the database groups have then specified how they would like to receive the data. 
+Meetings with the other indoor positioning group have been about what possibilities there have been for our part of the project, the work have then been distributed between our two groups. This is where it have been decided that we should be the group handling Cisco.
+
 \ofx{meeting with UM Jacob?}
