--- a/collaboration/collaboration.tex
+++ b/collaboration/collaboration.tex
@@ -1,4 +1,4 @@
-\chapter{Collaborations}
+\chapter{Collaborations}\label{sec:collaboration}
 a quote from the report guidelines for aSTEP\cite{guidelines}: 
 \begin{quotation}
 	At least two topic focused chapters describing common activities performed with at least one (maximum three) other group (not the same for each chapter). These chapters can be written together with other groups such that they are identical in the different reports. These chapters should mainly be focus on the final state of affairs and not the steps along the way. They should be the ideal starting point for new developers to continue the development on the system. It is emphasized that a project cannot cover all of the topics listed in the study regulation list and that this should not be penalized. These chapters should be focused on relevant problems in the project, such as:
