--- a/2sprint/chapter_doc.tex
+++ b/2sprint/chapter_doc.tex
@@ -6,6 +6,7 @@ In this chapter we describe the work done in the second sprint. Since it have be
 \input{2sprint/unit_test}
 \input{2sprint/code_documentation}
 \input{2sprint/client}
+\input{2sprint/store_data}
 
 \section{Sprint evaluation}
 As described in \cref{cha:sprint2} the goals for this sprint was: 
