--- a/collaboration/aSTEP_meetings.tex
+++ b/collaboration/aSTEP_meetings.tex
@@ -1,11 +1,21 @@
 \section{aSTEP meetings}
+In this section there will be described some of the 
 In the aSTEP project ten groups are working together to make one large system with multiple applications. To keep track of all groups progress and their needs i regard to other parts of the system, being developed by other groups, there are being held weekly meetings with one representative from each group. In addition to this there are being held smaller meetings, where only a few groups participate, in order to specify needs, present ideas and possible solutions.
 
+\subsection{Super-group Meetings}
 At the large meetings our representative have been responsible for taking notes after which he writes a summary and makes it available for everyone. During these meetings there is a live chat on Slack such that everyone in the project can see what happens and come with input if there are something they wish to be taken up. In mid March it was decided at a meeting that there should be a mid-sprint meeting, where the goals for the sprint was presented and the progress thereof evaluated.
 
-We have had multiple smaller meetings with respectively the groups responsible for the database, the application group utilizing indoor positioning, the user management group and the other group working with indoor positioning. 
-At meetings with the application group they have specified what data they need and we have explained how we can provide it. 
-At meetings with the database groups there have been talked about what data we want to be stored, based on what we have been told by the application group and the database groups have then specified how they would like to receive the data. 
-Meetings with the other indoor positioning group have been about what possibilities there have been for our part of the project, the work have then been distributed between our two groups. This is where it have been decided that we should be the group handling Cisco.
+\subsection{Small Meetings}
+We have had multiple smaller meetings with respectively the groups responsible for the database, the application group utilizing indoor positioning, the user management group and the other group working with indoor positioning.
+ 
+\paragraph{Application meetings}
+At meetings with the application group they have specified what data they need and we have explained how we can provide it. The application using indoor positioning are making a hotmap, and they only wish for geographical coordinates and the confidence factor for each device.\ofx{someone can confirm this?}
 
-\ofx{meeting with UM Jacob?}
+\paragraph{Database meetings}
+At meetings with the database groups there have been talked about what data we want to be stored, based on what we have been told by the application group and the database groups have then specified how they would like to receive the data. At the initial meeting with the database groups it was requested by them that all locations are to be stored as geographical coordinates, rather than relative. We told them our initial ideas for what we would like to store, these requirements have since then changed, see \cref{sec:data_store}, and these have been passed on to the database groups through GitLab.
+
+\paragraph{Indoor meetings}
+Meetings with the other indoor positioning group have been about what possibilities there have been for our part of the project, the work have then been distributed between our two groups. This is where it have been decided that we should be the group handling Cisco whereas the other group would get started on the indoor API. There have been a continuous communication between our two groups to keep track of progress and difficulties. 
+
+\paragraph{UM meetings}
+There was also held a meeting with the UM group where... \ofx{meeting with UM Jacob?}
