minor change to meetings

--- a/collaboration/aSTEP_meetings.tex
+++ b/collaboration/aSTEP_meetings.tex
@@ -1,11 +1,14 @@
 \section{aSTEP meetings}
-In this section there will be described some of the 
-In the aSTEP project ten groups are working together to make one large system with multiple applications. To keep track of all groups progress and their needs i regard to other parts of the system, being developed by other groups, there are being held weekly meetings with one representative from each group. In addition to this there are being held smaller meetings, where only a few groups participate, in order to specify needs, present ideas and possible solutions.
+In this section there will be described some of the meeting held with other groups in the aSTEP project. There will be focused on the weekly supergroup meetings and the smaller meetings held with only a few groups
 
 \subsection{Super-group Meetings}
+In the aSTEP project ten groups are working together to make one large system with multiple applications. To keep track of all groups progress and their needs i regard to other parts of the system, being developed by other groups, there are being held weekly meetings with one representative from each group.
+
 At the large meetings our representative have been responsible for taking notes after which he writes a summary and makes it available for everyone. During these meetings there is a live chat on Slack such that everyone in the project can see what happens and come with input if there are something they wish to be taken up. In mid March it was decided at a meeting that there should be a mid-sprint meeting, where the goals for the sprint was presented and the progress thereof evaluated.
 
 \subsection{Small Meetings}
+In addition to the super-group meetings there are being held smaller meetings, where only a few groups participate, in order to specify needs, present ideas and possible solutions.
+
 We have had multiple smaller meetings with respectively the groups responsible for the database, the application group utilizing indoor positioning, the user management group and the other group working with indoor positioning.
  
 \paragraph{Application meetings}
