Def of coordinate types and conversions

--- a/collaboration/aSTEP_meetings.tex
+++ b/collaboration/aSTEP_meetings.tex
@@ -1,5 +1,5 @@
-\section{aSTEP meetings}
-In this section there will be described some of the meeting held with other groups in the aSTEP project. There will be focused on the weekly supergroup meetings and the smaller meetings held with only a few groups
+\section{aSTEP Meetings}
+In this section there will be described some of the meeting held with other groups in the aSTEP project. There will be focused on the weekly super-group meetings and the smaller meetings held with only a few groups
 
 \subsection{Super-group Meetings}
 In the aSTEP project ten groups are working together to make one large system with multiple applications. To keep track of all groups progress and their needs i regard to other parts of the system, being developed by other groups, there are being held weekly meetings with one representative from each group.
@@ -11,7 +11,7 @@ In addition to the super-group meetings there are being held smaller meetings, w
 
 We have had multiple smaller meetings with respectively the groups responsible for the database, the application group utilizing indoor positioning, the user management group and the other group working with indoor positioning.
  
-\paragraph{Application meetings}
+\paragraph{Application Meetings}
 At meetings with the application group they have specified what data they need and we have explained how we can provide it. The application using indoor positioning are making a hotmap, and they only wish for geographical coordinates and the confidence factor for each device.\ofx{someone can confirm this?}
 
 \paragraph{Database meetings}
