--- a/preamble_ida13.tex
+++ b/preamble_ida13.tex
@@ -118,7 +118,8 @@
 \newcommand{\RaS}{\ensuremath \Rightarrow_{S}}
 \newcommand{\raS}{\ensuremath \rightarrow_{S}}
 \newcommand{\rhu}{\ensuremath \rightharpoonup}
-
+\newcommand\floor[1]{\lfloor#1\rfloor}
+\newcommand\ceil[1]{\lceil#1\rceil}
 % Logiske konnektiver
 
 \newcommand{\logand}{\wedge}
