--- a/bib.bib
+++ b/bib.bib
@@ -251,3 +251,11 @@
 	note = {Accessed 24-3-2016},
 	url ={http://junit.org/junit4/}
 }
+
+
+@MISC{cisco_geo_type,
+	author = {Cisco},
+	title = {Chapter 21: Google Earth Maps},
+	note = {Accessed 28-3-2016},
+	url ={http://www.cisco.com/c/en/us/td/docs/wireless/wcs/6-0/configuration/guide/WCS60cg/6_0google.html}
+}
