--- a/collaboration/collaboration.tex
+++ b/collaboration/collaboration.tex
@@ -18,3 +18,4 @@ This means we need to make at least two collaborations with other aSTEP groups.
 
 \input{collaboration/aSTEP_meetings}
 \input{collaboration/gitlab}
+\input{collaboration/code_documentation}
