--- a/collaboration/gitlab.tex
+++ b/collaboration/gitlab.tex
@@ -6,9 +6,9 @@ The formed GitLab group used Slack to communicate and assign tasks within the gr
 \subsection{GitLab Update}
 The first task assigned to our group was to update GitLab which is running on the semesters virtual server, hence refereed to as the aSTEP server. It was agreed that the best approach would be to install a virtual server on a computer, to emulate the GitLab update. This was done to ensure that in case the update would fail it could not cause problems to the aSTEP server.
 %The magnitude of this task involves installing a virtual server on a computer to emulate the GitLab update to ensure that if it fails, it will not cause problems to the aSTEP server which is running the actual GitLab service. 
-The program VirtualBox\cite{vbox} was used to emulate an Ubuntu Server operation system, where the GitLab service was installed. In addition PuTTY\cite{putty} is used to allow connection and communication with the aSTEP server.
+The reason for updating GitLab is in order to increase performance, which have been achieved for builds as well as runners, push and pull. 
 
-The reason for updating GitLab is in order to increase performance, which was achieved for builds as well as runners, push and pull. 
+To do so the program VirtualBox\cite{vbox} was used to emulate an Ubuntu Server operation system, where the GitLab service was installed. In addition PuTTY\cite{putty} is used to allow connection and communication with the aSTEP server.
 
 In order to install a 64-bit architecture one must; turn on Intel (R) Virtualization Technology and Intel (R) VT-d Feature in Basic Input Output System (BIOS). Then disable Hyper-V in Windows Features, restart the machine and updated the setting. VirtualBox will now show the option for 64-bit. 
 GitLab is now ready to be installed on the test machine by following the guide from GitLab's website\cite{gitlab_guide}.
@@ -17,11 +17,10 @@ GitLab is now ready to be installed on the test machine by following the guide f
 
 %GitLab is now ready to be installed on the test machine by following the guide from GitLab's website\cite{gitlab_guide}.
 
-To test the update a backup must be extracted from the aSTEP server. To extract a backup and upload it to the testing server a sub program of PuTTY, called pscp, will be used. This allows extraction from the aSTEP server and the uploading of files to the test machine.
-
+To test the update a backup must be extracted from the aSTEP server. %To extract a backup and upload it to the testing server a sub program of PuTTY, called pscp, will be used. This allows extraction from the aSTEP server and the uploading of files to the test machine.
 When the backup is extracted the next step is then to update GitLab with the new version. GitLab developers have incorporated some measures to ensure that the GitLab servers will not lose data even if an update fails. This is done automatic by creating a backup before installing and detailing the process in a log if anything went wrong, along with a set of solutions to the possible problems.
 
-After this was done a Wiki page was created in the shared GitLab Wiki that would help future semesters in updating GitLab if necessary. The whole process of setting up a virtual test server will not be descried in the Wiki. It was deemed not to be necessary since GitLab have the automatic backup feature.
+After this was done a Wiki page was created in the shared GitLab Wiki that would help future semesters in updating GitLab if necessary. The whole process of setting up a virtual test server will not be descried in the Wiki. It was deemed not to be necessary since GitLab have an automatic backup feature.
 
 \subsection{GitLab Merge}
 \ofx{Can you write an initial section on this Anders?}
